axum-macros/tests/from_request/fail/generic_without_via.stderr
error: #[derive(FromRequest)] only supports generics when used with #[from_request(via)]
 --> tests/from_request/fail/generic_without_via.rs:5:18
  |
5 | struct Extractor<T>(T);
  |                  ^

warning: unused import: `Extension`
 --> tests/from_request/fail/generic_without_via.rs:1:38
  |
1 | use axum::{body::Body, routing::get, Extension, Router};
  |                                      ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `fn(Extractor<()>) -> impl Future<Output = ()> {foo}: Handler<_, _>` is not satisfied
   --> tests/from_request/fail/generic_without_via.rs:10:42
    |
10  |     Router::<Body>::new().route("/", get(foo));
    |                                      --- ^^^ the trait `Handler<_, _>` is not implemented for `fn(Extractor<()>) -> impl Future<Output = ()> {foo}`
    |                                      |
    |                                      required by a bound introduced by this call
    |
    = help: the trait `Handler<T, ReqBody>` is implemented for `Layered<S, T>`
note: required by a bound in `axum::routing::get`
   --> $WORKSPACE/axum/src/routing/method_routing.rs
    |
    | top_level_handler_fn!(get, GET);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `axum::routing::get`
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
